--- a/package.json
+++ b/package.json
@@ -13,13 +13,14 @@
   "dependencies": {
     "@emotion/react": "^11.14.0",
     "@emotion/styled": "^11.14.1",
+    "@mui/icons-material": "^7.3.1",
     "@mui/material": "^7.2.0",
     "dayjs": "^1.11.13",
     "formik": "^2.4.6",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
     "react-router-dom": "^7.7.1",
-    "react-scripts": "^5.0.1",
+    "react-scripts": "^0.0.0",
     "react-simple-typewriter": "^5.0.1",
     "yuk": "^1.1.1"
   },
