--- a/package.json
+++ b/package.json
@@ -17,8 +17,10 @@
     "@mui/material": "^7.2.0",
     "dayjs": "^1.11.13",
     "formik": "^2.4.6",
+    "framer-motion": "^12.23.12",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
+    "react-intersection-observer": "^9.16.0",
     "react-router-dom": "^7.7.1",
     "react-scripts": "^0.0.0",
     "react-simple-typewriter": "^5.0.1",
